--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
     set_by_lua $expose_headers 'return os.getenv("EXPOSE_HEADERS")';
     set_by_lua $allow_headers 'return os.getenv("ALLOW_HEADERS")';
 
-    more_set_headers "Access-Control-Allow-Origin: $http_origin";
+    more_set_headers "Access-Control-Allow-Origin: *";
     more_set_headers 'Access-Control-Allow-Credentials: true';
     more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE';
     more_set_headers "Access-Control-Allow-Headers: Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since,$allow_headers";
