--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,17 @@ http {
 
     more_set_headers "Access-Control-Expose-Headers: $expose_headers";
 
+    location ~ /(API_RECTIFY)$ {
+
+      if ($request_method = 'OPTIONS') {
+        add_header 'Content-Length' 0;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        return 204;
+      }
+
+      proxy_pass $proxy_host/$1/;
+    }
+
     location / {
 
       if ($request_method = 'OPTIONS') {
